<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_consume_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_consume_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_consumption_money"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_consume_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <View
            style="@style/DividerStyle"
            android:layout_below="@id/text_consume_fee"
            android:layout_marginTop="@dimen/margin_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_delivery_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_delivery_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_delivery_money"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_delivery_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <View
            style="@style/DividerStyle"
            android:layout_below="@id/text_delivery_fee"
            android:layout_marginTop="@dimen/margin_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_service_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_service_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_service_money"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_service_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <View
            style="@style/DividerStyle"
            android:layout_below="@id/text_service_fee"
            android:layout_marginTop="@dimen/margin_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_minimum_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_minimum_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_origin_least_amount"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_minimum_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <View
            style="@style/DividerStyle"
            android:layout_below="@id/text_minimum_fee"
            android:layout_marginTop="@dimen/margin_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_discount_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_discount_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_offers_money"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_discount_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawableEnd="@drawable/icon_delete"
            android:drawablePadding="3dp"
            android:drawableRight="@drawable/icon_delete"
            android:textColor="@color/module_receipt_07AD1F"
            android:textSize="@dimen/text_size_normal" />

        <LinearLayout
            android:id="@+id/layout_discount_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_discount_fee"
            android:orientation="vertical"
            android:visibility="gone" />

        <View
            style="@style/DividerStyle"
            android:layout_below="@id/layout_discount_items"
            android:layout_marginTop="@dimen/margin_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_receivable_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_receivable_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_receivable_money"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_receivable_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/accentColor"
            android:textSize="@dimen/text_size_normal" />

        <View
            style="@style/DividerStyle"
            android:layout_below="@id/text_receivable_fee"
            android:layout_marginTop="@dimen/margin_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_received_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_received_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_received_money"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />


        <LinearLayout
            android:id="@+id/layout_received_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_received_fee_lable"
            android:orientation="vertical"
            android:visibility="gone" />

        <View
            style="@style/DividerStyle"
            android:layout_below="@id/layout_received_items"
            android:layout_marginTop="@dimen/margin_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_need_fee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_content"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:paddingTop="@dimen/padding_content">

        <TextView
            android:id="@+id/text_need_fee_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module_receipt_need_pay"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_need_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/accentColor"
            android:textSize="@dimen/text_size_normal" />
    </RelativeLayout>

    <TextView
        android:id="@+id/module_receiptTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/gray_bg"
        android:padding="@dimen/padding_small"
        android:text="@string/module_receipt_discount"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/text_whole_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_corner_bg_ripple"
            android:drawableLeft="@drawable/icon_discount"
            android:drawablePadding="@dimen/padding_micro"
            android:drawableStart="@drawable/icon_discount"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/padding_small"
            android:singleLine="true"
            android:text="@string/module_receipt_whole_order_discount"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/text_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/selector_button_corner_bg_ripple"
            android:drawableLeft="@drawable/ic_verify"
            android:drawablePadding="@dimen/padding_micro"
            android:drawableStart="@drawable/ic_verify"
            android:ellipsize="end"
            android:gravity="start|center_vertical"
            android:paddingBottom="@dimen/padding_small"
            android:paddingEnd="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/padding_small"
            android:singleLine="true"
            android:text="@string/module_receipt_verification"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@color/gray_bg"
        android:padding="@dimen/padding_small"
        android:text="@string/module_receipt_method"
        android:textColor="@color/secondaryTextColor"
        android:textSize="@dimen/text_size_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_small"
        android:background="@color/white" />
</LinearLayout>